--- a/www/index.html
+++ b/www/index.html
@@ -2,14 +2,11 @@
 
 <html>
     <head>
-        <meta charset="utf-8" />
-        <meta name="format-detection" content="telephone=no" />
-        <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
-        <!--<link rel="stylesheet" type="text/css" href="css/index.css" />-->
-        <title>Cookie Maker</title>
+		<title>Donut Dominator!</title>
     </head>
     <body>
-        <h1>C is for Cookies!</h1>
-		<p><img src="http://img4.wikia.nocookie.net/__cb20120922235441/monster/images/f/f4/CookieMonster-Sitting.jpg"></p>
-    </body>
+		<h2>Donut Dominator!</h2>
+		<p>On a quest to dominate all things donut!</p>
+		<p>Second paragraph</p>
+	</body>
 </html>
